--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Alin Capitanescu">
 
-    <title>Test rendering with large dataset</title>
+    <title>Test with large dataset</title>
 
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
