--- a/angular1/index3.html
+++ b/angular1/index3.html
@@ -25,7 +25,7 @@
 	  <div ng-include="'partials/header.html'"></div>
 	 
       <div class="row">        
-		<div ng-include="'partials/table-one-way-binding.html'"></div>
+		<div id="table" ng-include="'partials/table-one-way-binding.html'"></div>
 		
       </div>
     </div> <!-- /container -->
