angular turn off debug info reactjs disable buttons while running test

--- a/angular1/index3.html
+++ b/angular1/index3.html
@@ -14,7 +14,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
 
-  <body ng-app="app">
+  <body ng-app="app" ng-strict-di>
     <div class="container" ng-controller="TestRendering">
 
       <div class="page-header">
