--- a/angular1/index2.html
+++ b/angular1/index2.html
@@ -15,7 +15,7 @@
 
   </head>
 
-  <body ng-app="app">
+  <body ng-app="app" ng-strict-di>
     <div class="container" ng-controller="TestRendering">
 
       <div class="page-header">
