added memory profile for all tests

--- a/angular1/index3.html
+++ b/angular1/index3.html
@@ -29,6 +29,19 @@
 		
       </div>
     </div> <!-- /container -->
+
+    <script src="libs/memory-stats/memory-stats.js"></script>
+    <script>
+        var stats = new MemoryStats();
+        stats.domElement.style.position = 'fixed';
+        stats.domElement.style.right        = '0px';
+        stats.domElement.style.bottom       = '0px';
+        document.body.appendChild( stats.domElement );
+        requestAnimationFrame(function rAFloop(){
+            stats.update();
+            requestAnimationFrame(rAFloop);
+        });
+    </script>
 	
 	<script src="libs/angular/1.4.0/angular.min.js"></script>
 	<script src="app/app.js"></script>
