--- a/reactjs/index.html
+++ b/reactjs/index.html
@@ -28,6 +28,19 @@
             <div id="content"></div>
         </div>
 
+        <script src="libs/memory-stats/memory-stats.js"></script>
+        <script>
+        var stats = new MemoryStats();
+        stats.domElement.style.position = 'fixed';
+        stats.domElement.style.right        = '0px';
+        stats.domElement.style.bottom       = '0px';
+        document.body.appendChild( stats.domElement );
+        requestAnimationFrame(function rAFloop(){
+            stats.update();
+            requestAnimationFrame(rAFloop);
+        });
+        </script>
+
         <script type="text/jsx;harmony=true" src="scripts/test.js"></script>
     </body>
 </html>
