--- a/angular1/index.html
+++ b/angular1/index.html
@@ -29,7 +29,20 @@
             <div id="table" ng-include="'partials/table.html'"></div>
         </div>
     </div> <!-- /container -->
-	
+
+    <script src="libs/memory-stats/memory-stats.js"></script>
+    <script>
+        var stats = new MemoryStats();
+        stats.domElement.style.position = 'fixed';
+        stats.domElement.style.right        = '0px';
+        stats.domElement.style.bottom       = '0px';
+        document.body.appendChild( stats.domElement );
+        requestAnimationFrame(function rAFloop(){
+            stats.update();
+            requestAnimationFrame(rAFloop);
+        });
+    </script>
+
 	<script src="libs/angular/1.2.20/angular.min.js"></script>
 	<script src="app/app.js"></script>
   </body>
