--- a/raw/index.html
+++ b/raw/index.html
@@ -31,6 +31,7 @@
         <a class="btn btn-lg btn-link" role="button" href="../angular1/index3.html">AngularJS v1.4.0</a>
         <a class="btn btn-lg btn-link" role="button" href="../angular2/dist/index.html">AngularJS v2.0.0-alpha.26</a>
         <a class="btn btn-lg btn-link" role="button" href="../reactjs/index.html">ReactJS 0.13.0</a>
+        <a class="btn btn-lg btn-link" role="button" href="../infernojs/index.html">InfernoJS 0.1.0</a>
         <a class="btn btn-lg btn-link selected" role="button">HTML DOM</a>
     </p>
 
