--- a/angular2/src/index.html
+++ b/angular2/src/index.html
@@ -20,6 +20,11 @@
             background-color: #337ab7;
             color: white;
         }
+
+        .btn-group-lg>.btn, .btn-lg {
+          font-size: 16px;
+        }
+
     </style>
 </head>
 <body>
