Updated Inferno to 0.2.3

--- a/infernojs/index.html
+++ b/infernojs/index.html
@@ -11,7 +11,7 @@
         <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
-        <script src="http://infernojs.org/infernojs-0.1.27.min.js"></script>
+        <script src="http://infernojs.org/infernojs-0.2.3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
     <body>
@@ -40,6 +40,6 @@
         });
         </script>
 
-        <script src="scripts/test.compiled2.js"></script>
+        <script src="scripts/test.compiled.js"></script>
     </body>
 </html>
