Use production version of react
The comparison isn't really fair, otherwise :)

--- a/reactjs/index.html
+++ b/reactjs/index.html
@@ -11,7 +11,7 @@
         <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
